# CalciumScoringSlicer

./: CMakeLists.txt  README.md
Agatston/: Agatston.py  CMakeLists.txt
Agatston/Resources/UI/: Agatston.ui
Integrated/: CMakeLists.txt  Integrated.py
Integrated/Resources/UI/: Integrated.ui
SpatiallyWeighted/: CMakeLists.txt  SpatiallyWeighted.py
SpatiallyWeighted/Resources/UI/: SpatiallyWeighted.ui
VolumeFraction/: CMakeLists.txt  VolumeFraction.py
VolumeFraction/Resources/UI/: VolumeFraction.ui
